WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271403
Web Inspector: Glitches when trying to edit a style from a style sheet that has an @import statement
https://bugs.webkit.org/show_bug.cgi?id=271403
Summary
Web Inspector: Glitches when trying to edit a style from a style sheet that h...
Qianlang Chen
Reported
2024-03-21 12:26:32 PDT
Created
attachment 470466
[details]
Reduced test case: host the webpage and open it to see instructions If a style sheet A `@import`s another style sheet B, using the inspector's style details panel to edit a style from sheet A glitches and removes the style immediately. For instance, let's say in style sheet A you have: @import url("style-sheet-B.css"); body { font-family: sans-serif; } Then when you try to edit the font-family style from the details panel, the inspector suddenly removes the font-family style altogether. See attached for a downloadable test case.
Attachments
Reduced test case: host the webpage and open it to see instructions
(773 bytes, application/zip)
2024-03-21 12:26 PDT
,
Qianlang Chen
no flags
Details
Video demo: editing font-family causes the glitch
(629.78 KB, video/mp4)
2024-03-21 12:35 PDT
,
Qianlang Chen
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-21 12:30:03 PDT
<
rdar://problem/125185110
>
Qianlang Chen
Comment 2
2024-03-21 12:35:51 PDT
Created
attachment 470468
[details]
Video demo: editing font-family causes the glitch Possible related bug around editing styles involving @import:
https://webkit.org/b/271402
Qianlang Chen
Comment 3
2024-08-13 16:43:33 PDT
See also
rdar://118919870
.
EWS
Comment 4
2024-09-19 14:55:25 PDT
Committed
283950@main
(227d5b5816c0): <
https://commits.webkit.org/283950@main
> Reviewed commits have been landed. Closing PR #32260 and removing active labels.
EWS
Comment 5
2024-11-18 11:58:00 PST
Committed
283286.487@safari-7620-branch
(250da3ba3c5d): <
https://commits.webkit.org/283286.487@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2295 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug